Update Project For SBT 1.0